--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
