--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "framer-motion": "^12.23.24",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
